reset overflow - THIS FIX THE ISSUE!!!

--- a/src/app/components/navigation/navigation.component.sass
+++ b/src/app/components/navigation/navigation.component.sass
@@ -13,3 +13,6 @@ mat-sidenav
 .top-space
   margin-top: 64px * 2
   padding: 16px
+
+mat-sidenav-container, mat-sidenav-content
+  overflow: initial
